# os-task3-nphl

./: CMakeLists.txt  lab3.cpp
